# machine-learning-zoomcamp

./: .gitignore  LICENSE
.github/workflows/: ci-cd.yml
03-classification/: Homework.ipynb  README.md
04-evaluation/: Untitled.ipynb  homework.ipynb
05-deployment/: Dockerfile  main.py  predict.py  pyproject.toml  test.py
08-deep-learning/: Homework.ipynb
09-serverless/: .gitignore  Dockerfile  Readme.md  main.py  pyproject.toml  q1_inspect.py  q2_predict.py  q6_test.py
10-kubernetes/: Dockerfile_full  README.md  q6_predict.py
capstone-project/: .gitignore  Capstone1.ipynb  Dockerfile  Makefile  README.md  ingest_data.py  notebook.ipynb  predict.py  pyproject.toml  test_predict.py  train.py
capstone-project/kube/: deployment.yaml  service.yaml
projects/: Dockerfile  README.md  predict.py  project.ipynb  requirements.txt  test.py  train.py
